# md-explorer

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: ci.yml  release.yml
src/: actions.rs  app.rs  main.rs
src/fs/: filter.rs  mod.rs  scanner.rs
src/ui/: file_tree.rs  layout.rs  mod.rs  preview.rs  search.rs
