[package]
name = "md-explorer"
version = "0.1.0"
edition = "2021"
authors = ["Greg F"]
license = "MIT"
repository = "https://github.com/gregfelice/md-explorer"
readme = "README.md"
keywords = ["tui", "markdown", "terminal", "file-browser", "cli"]
categories = ["command-line-utilities"]
description = "A Midnight Commander-inspired TUI for browsing markdown files"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
termimad = "0.30"
ignore = "0.4"
fuzzy-matcher = "0.3"
dirs = "5.0"

[[bin]]
name = "md-explorer"
path = "src/main.rs"

[profile.release]
lto = true
strip = true
